<resources>
    <string name="app_name">SMARTPHED</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="device_type_dumo">Duplex mode Bluetooth</string>
    <string name="btn_ok">OK</string>
    <string name="dialog_title_sys_err">系统错误</string>
    <string name="actMain_link_device_info_title">Selected Device :</string>
    <string name="actMain_device_info">%1$s</string>
    <string name="actMain_btn_pair">Pair</string>
    <string name="actMain_btn_comm">Connect</string>
    <string name="actMain_tv_hint_service_uuid_not_bond">Please pair with the Device.</string>
    <string name="actMain_msg_does_not_support_uuid_service">Application BT version does not support this Mobile.</string>
    <string name="actMain_msg_bluetooth_Bonding">pairing&#8230;</string>
    <string name="actMain_msg_device_connecting">Connecting device&#8230;</string>
    <string name="actMain_msg_device_connect_fail">communication failure</string>
    <string name="actMain_msg_bluetooth_Bond_Success">Pairing successful</string>
    <string name="actMain_msg_bluetooth_Bond_fail">Pairing failed</string>
    <string name="actMain_msg_pair_pwd_error">Pairing password must be 4 digits</string>
    <string name="actMain_menu_rescan">Rescan</string>
    <string name="actDiscovery_msg_select_device">Select the device you need to connect</string>
    <string name="actDiscovery_msg_not_find_device">Devices not found</string>
    <string name="actDiscovery_msg_scaning_device">Searching for Blutooth devices,please wait&#8230;</string>
    <string name="actDiscovery_msg_starting_device">Bluetooth is turned on&#8230;</string>
    <string name="actDiscovery_msg_start_bluetooth_fail">Bluetooth turn on failed</string>
    <string name="actDiscovery_msg_bluetooth_not_start">Bluetooth is not enabled</string>
    <string name="actDiscovery_menu_scan">Scan</string>
    <string name="actDiscovery_bond_bonded">Bonded</string>
    <string name="actDiscovery_bond_nothing">Nothing</string>
    <string name="actByteStream_btn_send_desc">Send button</string>
    <string name="actByteStream_tv_receive_text">Data receive</string>
    <string name="protocol">General Protocol</string>
    <string name="escprotocol">Esc Sequence Protocol</string>
    <string name="device_type_bredr">BR/EDR Bluetooth</string>
    <string name="device_type_ble">Bluetooth Energy is Low</string>
    <string name="msg_msg_bt_connect_lost">Bluetooth device connection is lost, try to reconnect</string>
    <string name="Connect">Connect</string>
    <string name="not_connected">Mobile is not connected with device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Exiting Application.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="exit">Exit</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="meter_read">ETER READING</string>
    <string name="billing">ILLING</string>
    <string name="collection">OLLECTION</string>
    <string name="survey">URVEY</string>
    <string name="replacement">EPLACEMENT</string>
    <string name="bill"> Billing</string>
    <string name="upload_download">Download Master</string>
    <string name="reports">Reports</string>
    <string name="summary">Summary</string>
    <string name="accno">Customer No.</string>
    <string name="ivrsno">Old Customer NO.</string>
    <string name="mtrno">Meter no.</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="bulkupload">Bulk upload</string>
    <string name="fullupload">Full upload</string>
    <string name="test">Test</string>
    <string name="end_session">End Session</string>
    <string name="billreceipt">Bill receipt</string>
    <string name="con_no">Customer No.</string>
    <string name="bill_no">Bill No.</string>
    <string name="reading_date">Reading Date</string>
    <string name="pay_by">Pay By</string>
    <string name="bill_date">Bill Date</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="aft_due_date">After Due Date</string>
    <string name="amount">Amount</string>
    <string name="amt_due_date">Amount Due date</string>
    <string name="view_name">NAME:</string>
    <string name="view_address">ADDRESS:</string>
    <string name="view_Rahul_Jeth">Rahul Jeth</string>
    <string name="tariff_category">Tariff Category</string>
    <string name="load">Load -</string>
    <string name="phase">Phase</string>
    <string name="arrears">Arrears (Rs.)</string>
    <string name="der_mtr_sts">Der Mtr Sts</string>
    <string name="consumed_units">Consumed Units</string>
    <string name="arrear">Arrear</string>
    <string name="der_mtr_sta">derived mtr sta</string>
    <string name="Units">Units</string>
    <string name="cur_bill">Current Bill</string>
    <string name="current">Current</string>
    <string name="total_amount">Total Amount</string>
    <string name="total">Total</string>
    <string name="amt_due">Amount Due</string>
    <string name="bill_month">Bill Month</string>
    <string name="view_next">NEXT</string>
    <string name="acc_id">Customer ID</string>
    <string name="acc_no">Customer No. :</string>
    <string name="ivrs_no">OLd Cust NO.</string>
    <string name="con_name">Customer Name </string>
    <string name="mtr_number">Meter Number </string>
    <string name="traiff_code">Tariff Code </string>
    <string name="cam_load">load </string>
    <string name="cam_continue">Continue </string>
    <string name="last_reciept_print"> Last Receipt Print</string>
    <string name="coll_recp">Customer Info</string>
    <string name="rebate_date">Rebate Date</string>
    <string name="Con_type">Customer Type</string>
    <string name="Arrear">Arrear</string>
    <string name="Amt">Outstanding Amount</string>
    <string name="previous_amt_date">Date</string>
    <string name="amt_pay_before_re_dt">Amount Payable before Rebate Date</string>
    <string name="amt_pay_after_re_dt">Amount Payable After Rebate date</string>
    <string name="amt_re_dt">Amount Rebate date</string>
    <string name="pre_amt_re_dt">Amount  date</string>
    <string name="session">METER No :</string>
    <string name="session1">METER No.</string>
    <string name="division">DIVISION :</string>
    <string name="IBC">IBC :</string>
    <string name="sub_division">SUB-DIVISION :</string>
    <string name="dc">DC : </string>
    <string name="BCS">BSC: </string>
    <string name="ivrs">PHONE No : </string>
    <string name="add">ADDRESS : </string>
    <string name="type">FACTORTYPE : </string>
    <string name="fact_amt">FACTORAMOUNT : </string>
    <string name="factor_type">FACTORTYPE </string>
    <string name="factor_tamt">FACTORAMT </string>
    <string name="div">division </string>
    <string name="sub_div">subdivision </string>
    <string name="receipt_no">Receipt No. </string>
    <string name="search_by_addr">Search By Address </string>
    <string name="consumer_name">Customer Name </string>
    <string name="search">Search</string>
    <string name="search_by_name">Search By Name</string>
    <string name="ent_acc_no">Enter Account No.</string>
    <string name="ent_mtr_no">Enter Meter No.</string>
    <string name="ok"> Ok </string>
    <string name="mtr_change_con">Meter Change Customers</string>
    <string name="total_cons">Total Cust:</string>
    <string name="new_cons">New Cust:</string>
    <string name="typ_remark">Type a remark, if any</string>
    <string name="nsc_consumers">NSC Customers</string>
    <string name="ch_pay_type">Choose Payment Method</string>
    <string name="cash">CASH</string>
    <string name="PRE">PREPAID</string>
    <string name="chq">CHEQUE</string>
    <string name="POS">POSTPAID</string>
    <string name="ddd">DD</string>
    <string name="dd">POS</string>
    <string name="ent_amount">Enter Amount</string>
    <string name="ent_chq_no">Enter Cheque Number</string>
    <string name="ent_dd_no">Enter DD Number</string>
    <string name="pos_no">Enter POS Receipt Number</string>
    <string name="ent_bank_name">Enter Bank Name</string>
    <string name="incident">Incident</string>
    <string name="ent_mob_no">Enter Mobile No.</string>
    <string name="ent_date">Enter Date</string>
    <string name="dt">Date</string>
    <string name="print">Accept Payment</string>
    <string name="printer_setting">Printer Setting</string>
    <string name="language_setting">Language Setting</string>
    <string name="choose_lang">Choose Language</string>
    <string name="impact_print">Impact printing</string>
    <string name="hindi">Hindi</string>
    <string name="eng">English</string>
    <string name="amigos">Amigos</string>
    <string name="rego">Rego</string>
    <string name="softland">Softland</string>
    <string name="print_roll">Printing Roll</string>
    <string name="thr_print">Thermal printing</string>
    <string name="evolute">Evolute</string>
    <string name="analogics">Analogics</string>
    <string name="nm">Name</string>
    <string name="pr_mtr_status">Pres. Meter Status</string>
    <string name="curr_reading">Curr. Reading</string>
    <string name="max_demand">Max Demand</string>
    <string name="mtr_no">Meter Number</string>
    <string name="max_demand_un">Max Demand Unit</string>
    <string name="pr_factor">Power Factor</string>
    <string name="pr_factor_un">Pow. Factor Unit :</string>
    <string name="md_value">*MD value should be taken in KW</string>
    <string name="pr_reading">Probe Reading</string>
    <string name="snd_to_server">Send Log To Server</string>
    <string name="add_reason">Add Reason</string>
    <string name="rd_on_meter">Reading on meter :</string>
    <string name="ent_reading">Enter Reading</string>
    <string name="slt_reason">Select Reason :</string>
    <string name="rpt">Reports</string>
    <string name="nw_con_lt">New Customer List</string>
    <string name="mtr_change_lt">Meter Change List</string>
    <string name="nt_rd_con_lt">Not Read Customer List</string>
    <string name="syn_MD">MD Customer List</string>
    <string name="syn_UNMD">Non MD Customer List</string>
    <string name="syn_bill_con">Sync Billed Customer</string>
    <string name="download">Download</string>
    <string name="mr_download">NSC/MR Download</string>
    <string name="upload">Upload</string>
    <string name="frm_gallery">From gallery</string>
    <string name="tk_pic">Take picture</string>
    <string name="clr">CLEAR</string>
    <string name="smt">SUBMIT</string>
    <string name="pl_sign_bw">Please Sign below ...</string>
    <string name="dl_sumarry_rpt">Daily Summary Report</string>
    <string name="cumm_rpt">Cummulative Report</string>
    <string name="nt_rd_con">Not Read Customers</string>
    <string name="nt_rd_con_rep">Replaced Customers</string>
    <string name="un_col_con_rpt">Un-Collected Customer Report</string>
    <string name="voltage">Voltage</string>
    <string name="mtr">Meter</string>
    <string name="tng">Tongue</string>
    <string name="r_phase">R Phase :</string>
    <string name="y_phase">Y Phase :</string>
    <string name="b_phase">B Phase :</string>
    <string name="cp_img">Capture Image </string>
    <string name="od_accno">Oldaccount no.</string>
    <string name="nw_con">New Consumer</string>
    <string name="mob">Mobile No</string>
    <string name="rt_sequence">Route Sequence</string>
    <string name="bk">Back</string>
    <string name="mtr_img">Meter Image</string>
    <string name="clk_cap">Click to Capture</string>
    <string name="pr_img">Premises Image</string>
    <string name="lat">Latitude.</string>
    <string name="lon">Longitude.</string>
    <string name="accuracy">Accuracy.</string>
    <string name="save">SAVE</string>
    <string name="save_upload">Save and Upload</string>
</resources>