<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgscreen"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:drawablePadding="10dp"
            android:text="@string/accno"
            android:layout_gravity="start"

            android:textAlignment="viewStart"
            android:drawableLeft="@drawable/accno"
            android:fontFamily="sans-serif"
            android:background="@drawable/green_button"
            android:id="@+id/accountno"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/od_accno"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/oldaccno"
            android:fontFamily="sans-serif"
            android:background="@drawable/green_button"
            android:id="@+id/oldaccountno"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:drawablePadding="10dp"
            android:text="@string/mtrno"
            android:layout_gravity="start"
            android:fontFamily="sans-serif"
            android:textAlignment="viewStart"
            android:drawableLeft="@drawable/meterno"
            android:background="@drawable/green_button"
            android:id="@+id/meterno"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:drawableLeft="@drawable/name"
            android:fontFamily="sans-serif"
            android:background="@drawable/green_button"
            android:drawablePadding="10dp"
            android:text="@string/name"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:id="@+id/name"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:drawableLeft="@drawable/address"
            android:background="@drawable/green_button"
            android:drawablePadding="10dp"
            android:text="@string/address"
            android:fontFamily="sans-serif"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:id="@+id/address"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button"
            android:layout_margin="2dp"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/accno"
            android:drawablePadding="10dp"
            android:text="@string/nw_con"
            android:fontFamily="sans-serif"
            android:textAlignment="viewStart"
            android:id="@+id/recheckrequest"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/dupbill"
            android:background="@drawable/green_button"
            android:drawablePadding="10dp"
            android:text="@string/mob"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:fontFamily="sans-serif"
            android:textAlignment="viewStart"
            android:id="@+id/mobileno"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/routeno"
            android:background="@drawable/green_button"
            android:text="@string/rt_sequence"
            android:layout_margin="2dp"
            android:clickable = "false"
            android:layout_gravity="start"
            android:fontFamily="sans-serif"
            android:textAlignment="viewStart"
            android:id="@+id/routesequence"/>
    </LinearLayout>

</ScrollView>