<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgscreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/Button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:drawableLeft="@drawable/accno"
            android:fontFamily="sans-serif"
            android:text="@string/accno"
            android:drawablePadding="10dp"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/ButtonOldacc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:drawableLeft="@drawable/oldaccno"
            android:fontFamily="sans-serif"
            android:text="@string/ivrsno"
            android:drawablePadding="10dp"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/ButtonMeter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:drawableLeft="@drawable/meterno"
            android:fontFamily="sans-serif"
            android:text="@string/mtrno"
            android:drawablePadding="10dp"
            android:textAlignment="viewStart" />
        <Button
            android:id="@+id/bt_searchByBookId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:drawableLeft="@drawable/book_icon"
            android:fontFamily="sans-serif"
            android:text="Book ID"
            android:drawablePadding="10dp"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/Button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:drawableLeft="@drawable/name"
            android:fontFamily="sans-serif"
            android:text="@string/name"
            android:drawablePadding="10dp"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/Button4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:drawableLeft="@drawable/address"
            android:fontFamily="sans-serif"
            android:text="@string/address"
            android:drawablePadding="10dp"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/Button5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:drawableLeft="@drawable/dupbill"
            android:fontFamily="sans-serif"
            android:text="@string/bulkupload"
            android:drawablePadding="10dp"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/Button6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:clickable="false"
            android:drawableLeft="@drawable/accno"
            android:fontFamily="sans-serif"
            android:text="@string/fullupload"
            android:drawablePadding="10dp"
            android:textAlignment="viewStart" />

        <Button
            android:visibility="gone"
            android:id="@+id/ButtonRoute"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:drawableLeft="@drawable/routeno"
            android:fontFamily="sans-serif"
            android:text="@string/test"
            android:drawablePadding="10dp"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/ButtonSession"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            android:drawableLeft="@drawable/name"
            android:fontFamily="sans-serif"
            android:text="@string/end_session"
            android:drawablePadding="10dp"
            android:textAlignment="viewStart"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>