<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.fedco.mbc.activity.ReasonActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:gravity="left|center"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/header_thm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/HomeText"
                style="@style/Base.TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/HomeButton"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/add_reason"
                android:textColor="@color/sweet_dialog_bg_color"
                android:textSize="20sp"
                android:textStyle="normal"

                />
        </LinearLayout>
        <!--
        <Button
        android:id="@+id/HmeBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/homebtn"
        android:padding="10dp" />
        -->

    </RelativeLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="370dp"
        android:layout_margin="15dp"

        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingBottom="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout style="@style/linear_fieldset"
            android:id="@+id/ll_reading"
           android:visibility="gone"
           >

            <TextView
                android:id="@+id/tv_reading"
                style="@style/textview_gen"
                android:text="@string/rd_on_meter"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/et_reading"
                style="@style/edittext_gen_stl"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/color_primary"
                android:hint="@string/ent_reading"
                android:inputType="number"
                />
        </LinearLayout>

        <LinearLayout style="@style/linear_fieldset"
            android:id="@+id/ll_reading2"
            android:visibility="gone"
           >

            <TextView
                android:id="@+id/tv_mtrno"
                style="@style/textview_gen"
                android:text="@string/mtr_no"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/et_mtrno"
                style="@style/edittext_gen_stl"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/color_primary"
                android:hint="@string/ent_mtr_no"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_reasons"
            style="@style/textview_gen"
            android:text="@string/slt_reason"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout style="@style/linear_fieldset">


            <Spinner
                android:id="@+id/spr_reasons"
                style="@style/edittext_gen_stl"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/color_primary"
               />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
